[package]
name = "pandas_rust_algos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pandas_rust_algos"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.3"
numpy = "0.18"
ndarray = {version = "0.15", features=["rayon"]}
